--- a/test/public/index.html
+++ b/test/public/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <title>svelte-select tests</title>
-
-        <link rel="stylesheet" href="/bundle.css" />
     </head>
     <body>
         
-        
-        <script type="module" src="/index.js"></script>
+        <div id="testTemplate"></div>
+        <div id="extra"></div>
+        <script type="module" src="/tests.js"></script>
     </body>
 </html>
